# QuickMPC-libClient-py

./: .gitignore  Pipfile  README-ja.md  README.md  mypy.ini  setup.cfg  setup.cfg.jinja2  tox.ini
.github/workflows/: python.yml  release.yml  test.yml
demo/integration_demo/: execute_demo.py  hjoin_demo.py  progress_demo.py
demo/unit_demo/: delete_share.py  demo_sharize.py  get_elapsed_time.py
quickmpc/: __init__.py  _version.py  exception.py  qmpc.py  qmpc_server.py  share.py  version.py
quickmpc/proto/: generate_grpc.py  libc_to_manage.proto  libc_to_manage_pb2.py  libc_to_manage_pb2_grpc.py
quickmpc/proto/common_types/: common_types.proto  common_types_pb2.py
quickmpc/utils/: if_present.py  make_pieces.py  overload_tools.py  parse_csv.py  random.py  restore.py
tests/unit_tests/: conftest.py  local_server.py  test_make_pieces.py  test_over_load.py  test_parse.py  test_qmpc.py  test_random.py  test_restore.py  test_share_recons.py  test_share_sharize.py
