[metadata]
name = quickmpc
author = Acompany
license=Apache 2.0 Licences
license_file=LICENSE

[options]
setup_requires=setuptools>=42; setuptools_scm[toml]>=3.4
python_requires=>=3.7, <=3.9
install_requires =
    numpy
    grpcio-tools==1.46.3
    pynacl
    tqdm
include_package_data = True
packages = find:
